202103xx:
- Screen saver feature for local browser by @tysonnorris
- disabled ASOC power management
- Bugfix: #nowplaying started correctly in local browser
- WISA integration (for OEMs only)

20210203:
- Allow to exchange L/R channels on non-DSP boards
- Bugfix: optical input on some DSP models not available
- Bugfix: Prev/Next button not working
- Improve volume control for cards with the DSP add-on
- Other small bugfixes and improvements

20201213:
- updated Bluetooth player
- improvements for Amp100/DSP combination
- fixed in DAC+ DSP and DSP add-on DSP profiles
- improved docker container configuration
- stability improvements

20201201:
- added OpenHome player
- added Amp100 driver
- Improved Snapcast player (thanks to https://github.com/Bertware)
- Security: Secure DLNA against Callstranger (CVE-2020-12695)
- update MPD to 0.22
- upgrade buildroot to 2020.11
- improve pausing of services when other player starts playback

20201101:
- replaced Spotifyd by Vollibrepsot
- new audiocontrol backend that can deal with non-MPRIS source
- improve pausing of active player
- Bugfix: DAC2HD not detected correctly
- Bugfix: SMB mounts working more reliably
- lots of other small bugfixesy

20201022:
- Bugfix: DNLA not working
- Bugfix: overlay files on Pi2 missing

20201020:
- added MPD queue management
- Linux kernel upgrade to 5.14
- MPD upgrade to 0.21.25
- Squeezelite upgrade to latest version
- Updated Buildroot to 2020-08
- Bugfix: Local UI not starting due to incorrect overlay files

20200908:
- bugfixes in mount scripts and web UI

20200901:
- Improved UI navigation for local music
- Backup/Restore option
- improved updater shows available updates
- local web browser supports HTTPS now
- various bugfixes and improvements

20200727
- add SMB servers in the UI
- add/change artist pictures and coverart vin the UI
- allow limiting minimal volume for non-DSP sound cards
- support USB Bluetooth adadpters
- improve USB/NAS stability
- improve detection of sound cards