@@ -11,8 +11,9 @@ PC_DOWNLOAD=https://github.com/hifiberry/powercontroller/releases/download/$(PC_
 define HIFIBERRY_POWERCONTROLLER_INSTALL_TARGET_CMDS
     $(INSTALL) -D -m 0755 $(BR2_EXTERNAL_HIFIBERRY_PATH)/package/hifiberry-powercontroller/pc-write \
                 $(TARGET_DIR)/opt/hifiberry/bin
-    mkdir -p $(TARGET_DIR)/opt/hifiberry/powercontroller
-    curl $(PC_DOWNLOAD) --output $(TARGET_DIR)/opt/hifiberry/powercontroller/firmware-$(PC_VERSION).hex
+    $(INSTALL) -D -m 0755 $(BR2_EXTERNAL_HIFIBERRY_PATH)/package/hifiberry-powercontroller/write-firmware \
+                $(TARGET_DIR)/opt/hifiberry/powercontroller/write-firmware
+    curl -L $(PC_DOWNLOAD) --output $(TARGET_DIR)/opt/hifiberry/powercontroller/firmware-$(PC_VERSION).hex
 endef
 
 define HIFIBERRY_POWERCONTROLLER_INSTALL_INIT_SYSTEMD
